deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alex-gke-ingress-test-service
  namespace: alex-gke-ingress-test
spec:
  selector:
    name: alex-gke-ingress-test-app
    tier: backend
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  type: NodePort
