deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alex-gke-ingress-test-ingress
  namespace: alex-gke-ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: alex-gke-one.clio.dev
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: alex-gke-ingress-test-service
                port:
                  number: 80
